--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import-normalize;
+
 body {
   background-color: rgb(125, 127, 129);
   color: white;
@@ -12,6 +14,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 #root {
